--- a/src/pages/home/home.scss
+++ b/src/pages/home/home.scss
@@ -1,3 +1,12 @@
 page-home {
-
+    #fond {
+        background: url('../../assets/imgs/Accueil-iot.png');
+    }
+    .button-md-danger {
+        position: absolute;
+        color: #fff;
+        bottom: 100px;
+        left: 45%;
+        background-color: #f53d3d;
+    }
 }
