--- a/src/pages/commande/commande.scss
+++ b/src/pages/commande/commande.scss
@@ -1,4 +1,23 @@
 page-commande {
-    
+    ion-card {
+        position: relative;
+        text-align: center;
+        height: 300px;
     }
+    
+    .card-title {
+        position: absolute;
+        top: 36%;
+        font-size: 2.0em;
+        width: 100%;
+        font-weight: bold;
+    }
+    
+    .card-subtitle {
+        font-size: 1.0em;
+        position: absolute;
+        top: 52%;
+        width: 100%;
+    }
+}
     
