call api not error but not result

--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -33,11 +33,11 @@ ion-app.md {
     color: white;
     font-weight: bold;
 }
-.card-title-md {
-    color: #6e3c31;
-    font-size: 30px;
-    font-weight: bold;
-}
 strong {
     color: #f7a600;
+}
+.card-title-md {
+    color: white;
+    font-size: 30px;
+    font-weight: bold;
 }
