--- a/src/pages/commande/commande.scss
+++ b/src/pages/commande/commande.scss
@@ -19,5 +19,27 @@ page-commande {
         top: 52%;
         width: 100%;
     }
+    button.choix{
+        width: 100%;
+        background: white;
+    }
+    .card-header-md + .card-content-md, .card-md .item + .card-content-md {
+        height: 60%;
+        padding: 0px !important;
+    }
+    .card-md ion-list {
+        height: 100%;
+    }
+    ion-scroll {
+        height: 100%;
+    }
+    ion-app.md [padding] .scroll-content {
+        padding: 0px !important;
+        padding-bottom: 5px;
+    }
+    /*ion-card img {
+        display: block;
+        width: 50px;
+    }*/
 }
     
