--- a/src/pages/home/home.scss
+++ b/src/pages/home/home.scss
@@ -2,11 +2,10 @@ page-home {
     #fond {
         background: url('../../assets/imgs/Accueil-iot.png');
     }
-    .button-md-danger {
+    .button-md-warning {
         position: absolute;
         color: #fff;
         bottom: 100px;
-        left: 45%;
-        background-color: #f53d3d;
+        left: 44%;
     }
 }
