--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -16,7 +16,7 @@
 // automatically applied to the <body> element in the app.
 @font-face {
 	font-family: "BlockBert";
-	src: url('../assets/font/Block-Berthold.ttf.ttf');
+	src: url('../assets/font/Block-Berthold.ttf');
 }
 ion-app.md {
     font-family: "BlockBert" ,Arial,sans-serif !important;
