api recupération produit et inscription client + correction boucle affichage produit + localstorage corriger

--- a/src/pages/boisson/boisson.scss
+++ b/src/pages/boisson/boisson.scss
@@ -1,4 +1,7 @@
 page-boisson {
+    ion-card img {
+        width: 368px;
+    }
     .boisson-col:nth-child(even) {
         button, .card-md {
             box-shadow: none;
