--- a/src/pages/plat/plat.scss
+++ b/src/pages/plat/plat.scss
@@ -1,4 +1,7 @@
 page-plat {
+    ion-card img {
+        width: 368px;
+    }
     .plat-col:nth-child(even) {
         button, .card-md {
             box-shadow: none;
