paiement + arduino uid en cours

--- a/src/pages/boisson/boisson.scss
+++ b/src/pages/boisson/boisson.scss
@@ -6,6 +6,7 @@ page-boisson {
         button, .card-md {
             box-shadow: none;
             background: #93c0e9;
+            margin-bottom: 10px;
         }
         strong {
             color: #f7a600;
@@ -15,6 +16,7 @@ page-boisson {
         button, .card-md {
             box-shadow: none;
             background: #0171ce;
+            margin-bottom: 10px;
         }
     }
 }
