--- a/src/pages/plat/plat.scss
+++ b/src/pages/plat/plat.scss
@@ -6,6 +6,7 @@ page-plat {
         button, .card-md {
             box-shadow: none;
             background: #e8b182;
+            margin-bottom: 10px;
         }
         strong {
             color: #ee2e24;
@@ -15,6 +16,7 @@ page-plat {
         button, .card-md {
             box-shadow: none;
             background: #6e3c31;
+            margin-bottom: 10px;
         }
     }
 
