--- a/src/pages/paiement/paiement.scss
+++ b/src/pages/paiement/paiement.scss
@@ -4,4 +4,9 @@ page-paiement {
         width: 69px;
         height: 69px;
     }
+    p {
+        padding: 21px;
+        border-top: 1px solid black;
+        font-size: 26px;
+    }
 }
